esqueleto del proyecto v2

--- a/src/main/resources/styles/Styles.css
+++ b/src/main/resources/styles/Styles.css
@@ -1,9 +1,11 @@
 /* CSS for app */
 
+
 .btnGreen{
 	-fx-background-color:  #3cbc53;
 }
 
 .background{
 	-fx-background-color: DODGERBLUE;
+	-fx-padding: 20;
 }
