--- a/src/main/resources/fxml/Login.fxml
+++ b/src/main/resources/fxml/Login.fxml
@@ -1,34 +1,52 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import java.util.*?>
+<?import javafx.collections.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.effect.DropShadow?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane stylesheets="@../styles/Styles.css" xmlns="http://javafx.com/javafx/8.0.72" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.ufps.app.controller.LoginController">
-   <children>
-      <Rectangle fill="DODGERBLUE" height="250.0" stroke="#ffffff8b" strokeType="INSIDE" width="400.0" />
-      <Label fx:id="lblLogin" layoutX="97.0" layoutY="46.0" text="Login" textFill="WHITE">
-         <font>
-            <Font size="20.0" />
-         </font>
-      </Label>
-      <TextField fx:id="username" layoutX="98.0" layoutY="92.0" prefHeight="36.0" prefWidth="204.0" promptText="Username" />
-      <PasswordField fx:id="password" layoutX="98.0" layoutY="141.0" onAction="#login" prefHeight="36.0" prefWidth="204.0" promptText="Password" />
-      <Button fx:id="btnLogin" layoutX="215.0" layoutY="193.0" mnemonicParsing="false" onAction="#login" prefHeight="30.0" prefWidth="86.0" styleClass="btnGreen" text="Sign In" textFill="WHITE">
-         <font>
-            <Font size="15.0" />
-         </font>
-         <effect>
-            <DropShadow blurType="ONE_PASS_BOX" />
-         </effect></Button>
-   </children>
-   <opaqueInsets>
-      <Insets />
-   </opaqueInsets>
-</AnchorPane>
+<VBox stylesheets="@../styles/Styles.css"
+	xmlns="http://javafx.com/javafx/8.0.72"
+	xmlns:fx="http://javafx.com/fxml/1"
+	spacing="5"
+	styleClass = "background"
+	fx:controller="co.edu.ufps.app.controller.LoginController">
+	<children>
+		
+		<Label fx:id="lblLogin" text="Login" textFill="WHITE">
+			<font>
+				<Font size="20.0" />
+			</font>
+		</Label>
+		<TextField fx:id="username"  promptText="Username" />
+		<PasswordField fx:id="password" onAction="#login" promptText="Password"/>
+		<ComboBox fx:id="fruitCombo" promptText="Seleccione un rol">
+			<items>
+				<FXCollections fx:factory="observableArrayList">
+				</FXCollections>
+			</items>
+		</ComboBox>
+		<Button fx:id="btnLogin" 
+			mnemonicParsing="false" onAction="#login" styleClass="btnGreen" 
+			text="Sign In" textFill="WHITE">
+			<font>
+				<Font size="15.0" />
+			</font>
+			<effect>
+				<DropShadow blurType="ONE_PASS_BOX" />
+			</effect>
+		</Button>
+	</children>
+	<opaqueInsets>
+		<Insets />
+	</opaqueInsets>
+</VBox>
