--- a/bin/src/main/resources/fxml/item_ventas.fxml
+++ b/bin/src/main/resources/fxml/item_ventas.fxml
@@ -8,13 +8,11 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.HBox?>
 
-<HBox fx:id="dashItem" alignment="CENTER_LEFT" maxHeight="-Infinity" 
-maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" 
-prefHeight="53.0" prefWidth="802.0" spacing="73.0" 
+<HBox fx:id="dashItem" alignment="CENTER_LEFT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="53.0" prefWidth="802.0" spacing="100.0" 
 stylesheets="@../styles/items.css" 
 xmlns="http://javafx.com/javafx/8.0.171" 
 xmlns:fx="http://javafx.com/fxml/1" 
->
+fx:controller="co.edu.ufps.app.controller.ItemVentaController">
 	<children>
 		<ImageView fitHeight="31.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
 			<image>
@@ -32,30 +30,19 @@ xmlns:fx="http://javafx.com/fxml/1"
 			</HBox.margin>
 
 		</Label>
-		<Label fx:id="labelCategoria" layoutX="506.0" layoutY="18.0" text="Label">
+		<Label fx:id="labelCantidad" layoutX="506.0" layoutY="18.0" text="Label">
 			<HBox.margin>
 				<Insets />
 			</HBox.margin>
 		</Label>
-		<Label fx:id="labelProveedor" layoutX="378.0" layoutY="18.0" text="Label">
-			<HBox.margin>
-				<Insets />
-			</HBox.margin>
-		</Label>
-		<Label fx:id="labelPU" layoutX="600.0" layoutY="18.0" text="Label">
-			<HBox.margin>
-				<Insets />
-			</HBox.margin>
-		</Label>
-
-		<Label fx:id="labelStock" layoutX="659.0" layoutY="18.0" text="Label">
+		<Label fx:id="labelTotal" layoutX="378.0" layoutY="18.0" text="Label">
 			<HBox.margin>
 				<Insets />
 			</HBox.margin>
 		</Label>
 
 
-		<Button layoutX="727.0" layoutY="13.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="61.0"  text="Editar">
+		<Button fx:id="btnDelete" layoutX="727.0" layoutY="13.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="61.0" text="Quitar">
 			<HBox.margin>
 				<Insets />
 			</HBox.margin>
